	  (1) it has a bad side effect in that the sub-directory setting
	  no longer tracks the board setting, and (2) you still can't
	  source the Kconfig file from the custom board directory (2014-1-16).
	* Makefile.unix, Makefile.win, and configs/Kconfig:  After thinking a
	  little harder, I re-implemented the backed-out custom configuration
	  feature.  The new version does not have bad side-effect (1) (but stil
	  has bad side-effect (2)) (2014-1-16).
	* arch/x86/Kconfig and configs/qemu-i486/nsh/Make.defs and
	  ostest/Make.defs:  Add a configuration option to select the -m32
	  compiler option when building for a 32-bit target on a native 64-bit
	  compiler (2014-1-18).
	* include/ctype.h: Typo in macro name: iscntrl, not iscontrol (2104-1-17)
	* libc/unistd/lib_getopt.c:  If there are no arguments (argc == 1), then
	  getopt() make like the optind variable in an undefined state (2014-1-20).
	* configs/olimex-stm32-p107:  Failes to build is SPI3 for UEXT is not
	  remapped.  From Max Holtzberg (2014-1-21).
	* Several network related files:  Changes from Max Holtzberg to improve
	  how network status is reported.  New controls to manage carrier
	  detect.  (2014-1-21).
	* configs/16z:  Add basic support for the 16z board. The 16z board is
	  based on the ZiLOG ZNEOZ16F2811AL20EG part.  See
	  https://github.com/toyaga/16z for further information (2014-1-22),
	* tools/Config.mk: 'cypath' must be called if we are using a Windows
	  native toolchain with the Cygwin 'make' to convert paths to proper
	  Windows paths.  From Richard Cochran (2014-1-23).
	* /arch/arm/src/Makefile: dependency directory list is now computed
	  from the VPATH.  From Richard Cochran (2014-1-23).
	* arch/arm/src/efm32 and include/efm32:  Basic support for the EFM3
	  processor family from Richarc Cochran (2014-1-23).
	* configs/efm32-dk3650:  This is Energy Micro's development kit for
	  the Leopard Gecko MCU, which is an ARM Cortex-M3 device.  From Richard
	  Cochran (2014-1-23).